# audacious-plugins-fc

./: Makefile.am  README  README.md  audacious-plugins-fc.metainfo.xml  configure.ac
src/: Makefile.am  audfc.cpp  audfc.h  configure.cpp  configure.h
